Revert "Tryed to fix z-index for dialogs in IE"
This reverts commit a8e15f626337213c3ab6e40a29cb6571d1cd20bb.

--- a/sites/all/themes/ebog/css/style.css
+++ b/sites/all/themes/ebog/css/style.css
@@ -930,6 +930,3 @@ input[type=submit]:hover {
   width: 380px;
   margin-right: 0px; 
 }
-.ui-dialog {
-  z-index: 9999;
-}
